force-app/main/default/objects/Opportunity/fields/Cloud_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Type__c</fullName>
    <description>Champs pour indiquer le type de cloud choisis pour votre opportunité</description>
    <inlineHelpText>Veuillez sélectionner votre type de Cloud</inlineHelpText>
    <label>Cloud Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>