force-app/main/default/objects/Opportunity/fields/InitialCost__c.field-meta.xml
<CustomField>
    <fullName>InitialCost__c</fullName>
    <label>Initial Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>