force-app/main/default/objects/Opportunity/fields/Moon_TimesheetEnabled__c.field-meta.xml
<CustomField>
    <fullName>Moon_TimesheetEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timesheet enabled</label>
    <type>Checkbox</type>
</CustomField>